@startuml
!pragma layout smetana

' Klasse BaseDeconvolutionAlgorithm
abstract class BaseDeconvolutionAlgorithm {
    {abstract} +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    {abstract} +configure(const DeconvolutionConfig& config)
}

' Klasse RLDeconvolutionAlgorithm, die von BaseDeconvolutionAlgorithm erbt
class RLDeconvolutionAlgorithm {
    +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    +configure(const DeconvolutionConfig& config)
    -iterations: int
    -epsilon: double
    -grid: bool
    -borderType: int
    -psfSafetyBorder: int
    -cubeSize: int
}

' Template-Klasse DeconvolutionAlgorithm
class DeconvolutionAlgorithm<Algorithm, Args...> {
    +DeconvolutionAlgorithm(const DeconvolutionConfig& config, Args&&... args)
    +deconvolve(Hyperstack& data, PSF& psf): Hyperstack
    -algo: std::unique_ptr<BaseDeconvolutionAlgorithm>
}

' Vererbung RLDeconvolutionAlgorithm -> BaseDeconvolutionAlgorithm
RLDeconvolutionAlgorithm --|> BaseDeconvolutionAlgorithm


' Klasse Image3D
class Image3D {
    +getPixel(int x, int y, int z): float
    +showSlice(int z): bool
    +show(): bool
    -slices: std::vector<cv::Mat>
}

' Klasse Channel
class Channel {
    +id: int
    +image: Image3D
}

' Klasse Hyperstack
class Hyperstack {
    +Hyperstack()
    +Hyperstack(const Hyperstack& rhs)
    +~Hyperstack()
    +readFromTifFile(const char* filename): bool
    +readFromTifDir(const std::string& directoryPath): bool
    +saveAsTifFile(const std::string& directoryPath): bool
    +saveAsTifDir(const std::string& directoryPath): bool
    +showSlice(int channel, int z): bool
    +showChannel(int channel): bool
    +printMetadata(): void
    +getPixel(int channel, int x, int y, int z): float
    +convolve(PSF psf): Hyperstack
    -channels: std::vector<Channel>
    -metaData: ImageMetaData
}

' Klasse PSF
class PSF {
    +readFromTifFile(const char* filename): bool
    +readFromTifDir(const std::string& directoryPath): bool
    +saveAsTifFile(const std::string& directoryPath): bool
    +saveAsTifDir(const std::string& directoryPath): bool
    +flip3DPSF(): PSF
    +scalePSF(int new_size_x, int new_size_y, int new_size_z): void
    -image: Image3D
}

' Beziehungen zwischen den Klassen
Hyperstack --> Channel : "channels"
Channel --> Image3D : "image"
PSF --> Image3D : "image"
Hyperstack --> PSF : "convolve(PSF psf)"

@enduml
